# klipper-ezflash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-boards.yml
board/v1/: example.json  example.schema.json
board2kconf/: __init__.py  __main__.py  configurator.py  fault.py  kconfig.py  model.py  startup_util.py  test_startup_util.py  util.py
board2kconf/data/: boards.json  v1.schema.json
board2kconf/scripts/: board2kconf.py  board_db_util.py  test_all_boards.py
board2kconf/ui/: __init__.py
boards/: boards.json  boards.schema.json
scripts/: install.sh  stg1.sh
