[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[project]
name = 'kboard'
authors = [
    {name = "Laikulo", email = "aaron@haun.guru"},
    {name = "TheRougeZeta", email = "idk@idk.invalid"}
]
dynamic = ["version"]
dependencies = [
    'kconfiglib',
    'urwid'
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["board2kconf", "board2kconf.*"]

[tool.setuptools.package-data]
"board2kconf.data" = [ "*.json" ]

[project.scripts]
"check_kboards" = "board2kconf.scripts.test_all_boards:main"