[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[project]
name = 'kboard'
authors = [
    {name = "Laikulo", email = "aaron@haun.guru"},
    {name = "TheRougeZeta", email = "idk@idk.invalid"}
]
dynamic = ["version"]
dependencies = [
    'kconfiglib-klipper',
    'vindauga',
    'click'
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["board2kconf", "board2kconf.*"]

[tool.setuptools.package-data]
"board2kconf.data" = [ "*.json" ]

[project.scripts]
"ezflash-check-board-data" = "board2kconf.scripts.test_all_boards:main"
"ezflash-board2kconf" = "board2kconf.scripts.board2kconf:main"
"ezflash" = "board2kconf.__main__:main"
"ezflash-db" = "board2kconf.scripts.board_db_util:bdb"
